Added latin style

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             // Initialize GL map
             var map = new mapboxgl.Map({
                 container: 'map',
-                style: './ukraine_correct_crimea.json',
+                style: './ukraine_correct_crimea_uk.json',
+				//style: './ukraine_correct_crimea_en.json',
                 bounds: [[22, 44], [41, 53]]
             });
 
